<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SIN-DME</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="register">REGISTRARSE</string>
    <string name="create_company">Crear empresa</string>
    <string name="help">Ayuda</string>
    <string name="success_company_add">Empresa almacenada exitosamente.</string>
    <string name="success_employee_add">Empleado almacenado exitisamente.</string>
    <string name="error_company_add">Existió un error al momento de guardar la empresa.</string>
    <string name="error_employee_add">Existió un error al momento de guardar el empleado.</string>
    <string name="error_login">Existió un error al momento de realizar la petición, intente nuevamente.</string>
    <string name="error_report">Existió un error al momento de solicitar el reporte, el empleado no existe en base de datos.</string>
    <string name="new_company">Nueva empresa</string>
    <string name="worker">Trabajador</string>
    <string name="name">* Nombre</string>
    <string name="date">* Fecha de constitucion</string>
    <string name="department">* Departamento</string>
    <string name="city">* Municipio/Ciudad</string>
    <string name="nit">* Razón social</string>
    <string name="please_wait">Por favor, espera.. </string>
    <string name="uplodad_form">Subir información</string>
    <string name="add_employee">Agregar empleado nuevo</string>

    <string name="one">Información del trabajor</string>
    <string name="two">Su trabajo</string>
    <string name="three">Hábitos</string>
    <string name="four">Su estado de salud</string>
    <string name="six">Nuca</string>
    <string name="seven">Hombro</string>
    <string name="new_eigth">Brazo</string>
    <string name="eigth">Codo</string>
    <string name="nine">Antebrazo</string>
    <string name="ten">Muñeca</string>
    <string name="eleven">Mano</string>
    <string name="twelve">Dedos</string>
    <string name="thirteen">Espalda alta</string>
    <string name="fourteen">Espalda baja</string>
    <string name="fifteen">Cadera</string>
    <string name="sixteen">Muslo</string>
    <string name="seventeen">Rodilla</string>
    <string name="eighteen">Pierna</string>
    <string name="nineteen">Pie</string>
    <string name="companies_list">Lista de empresas</string>
    <string name="employees_list">Lista de empleados</string>
    <string name="no_employees">Esta empresa aún no tiene empleados registrados</string>

    <string name="names">* Nombres</string>
    <string name="lastnames">* Apellidos</string>
    <string name="id">* Número de identificación</string>
    <string name="sex">* Sexo</string>
    <string name="weight">* Peso (kg)</string>
    <string name="height">* Estatura (cm)</string>
    <string name="imc">* IMC (kg/m2)</string>
    <string name="right">Derecho</string>
    <string name="left">Izquierdo</string>
    <string name="both">Ambos</string>
    <string name="age">* Edad</string>
    <string name="area">* Area o dependencia</string>
    <string name="years">* Años</string>
    <string name="months">* Meses</string>
    <string name="dominancy">* Dominancia</string>

    <string name="smoke_question">* ¿Fuma?</string>
    <string name="how_many_cigarretes">* ¿Cuántos cigarrilos al día?</string>
    <string name="how_much_cigarretes">* ¿Hace cuánto tiempo fuma?</string>
    <string name="job_journey">* ¿Cuál es su jornada de trabajo?</string>
    <string name="job_journey_duration">* ¿Cuántas horas trabaja al día?</string>
    <string name="job_journey_variable">* ¿La duración semanal de la jornada es variable?</string>
    <string name="explain">* Explique</string>
    <string name="do_exercise">* ¿Hace actividad física?</string>
    <string name="which_activity">* ¿Cuál actividad física realiza?</string>
    <string name="frequency_activity">* ¿Con que frecuencia?</string>
    <string name="duration">Duración</string>

    <string name="since">Antiguedad en el cargo</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>

    <string name="yes">Si</string>
    <string name="no">No</string>
    
    <string name="pain_first_question">* ¿Durante los últimos 7 días ha presentado dolor, molestias o inconfort en alguna parte del cuerpo?</string>
    <string name="pain_second_question">* ¿Durante los últimos 7 días usted ha presentado alguna enfermedad?</string>
    <string name="which_one">* ¿Cúal?</string>
    <string name="observations">* Observaciones</string>
    <string name="photos">Fotos</string>
    <string name="photos_copy">Por favor tome y cargue\n3 fotos del puesto de trabajo</string>
    <string name="take_photos">Tomar fotos</string>
    <string name="company_report">Reporte empresa</string>

    <string name="company">Empresa</string>
    <string name="contact_responsable">Responsable de contacto</string>
    <string name="cut_date">Fecha de corte</string>
    <string name="professional_analyst">Profesional Analista</string>
    <string name="town">Municipio</string>

    <string name="section_one">Sección I</string>
    <string name="company_characterization">CARACTERIZACIÓN DE LA EMPRESA</string>
    <string name="general_data_company">Los datos generales de la empresa</string>
    <string name="workers_data">Los datos de los trabajadores</string>
    <string name="indicators_data">Los datos de indicadores</string>
    <string name="samples_and_areas_selected">Muestra y áreas seleccionadas</string>

    <string name="section_two">Section II: SIN DME</string>
    <string name="table_of_evaluated_workers">Tabla de trabajadores evaluados</string>
    <string name="jobs_areas">Áreas de trabajo</string>
    <string name="comments_and_qualify">Comentarios y clasificación de los trabajadores por proceso</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="main_menu">Menú principal</string>
    <string name="exit">Salir</string>

    <string name="update">Actualizar</string>
    <string name="edit_employee">Editar empleado</string>
    <string name="success_update">Empleado actualizado exitosamente</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>

    <string name="info_post">La información está lista para ser enviada al servidor acorde a las respuestas, desea continuar?</string>

    <string name="reports">Reportes</string>
    <string name="find_report">Buscar reporte</string>

    <string name="score">Nota</string>
    <string name="subdomain">Sub-Dominio</string>
    <string name="d1">D1 Información personal</string>
    <string name="d2">D2 Hábitos y estilo de vida</string>
    <string name="d3">D3 Caracteristicas del trabajo</string>
    <string name="d4">D4 Estado de salud</string>
    <string name="cigarretes_consume">Consumo de tabaco</string>
    <string name="cigarretes_consume_time">Tiempo de consumo de tabaco</string>
    <string name="exercise_consume">Frecuencia de actividad física</string>
    <string name="exercise_consume_time">Duración de actividad física</string>
    <!--Common fragment-->

    <string name="common.title">Nuca</string>
    <string name="common.first">\u2022 De acuerdo a las partes del cuerpo que identifica en cada gráfico, seleccione los lugares donde usted presenta molestias:</string>
    <string name="common.left_side">Lado izquierdo</string>
    <string name="common.right_side">Lado derecho</string>
    <string name="common.both">Ambos</string>
    <string name="common.question_a">1. Tengo molestias en %1$s</string>
    <string name="common.question_b">2. Generalmente se presentan como:</string>
    <string name="common.question_c">3. Los síntomas se presentan cuando:</string>
    <string name="common.question_d">4. Los tengo desde hace:</string>
    <string name="common.question_e">5. Permanecen por:</string>
    <string name="common.question_f">6. Si presenta DOLOR seleccione a continuación la INTENSIDAD del mismo:</string>
    <string name="common.question_g">7. Si usted experimentó molestias, dolor ¿Qué tan incómodo era esto?</string>
    <string name="common.question_h">8. Si usted experimentó dolor, ¿Cuánto  interfirió con su habilidad para trabajar?</string>

    <string name="permission_denied">Permiso negado, por favor intente de nuevo.</string>

    <string name="hours_worked">Número de horas trabajadas</string>
    <string name="week_duration">Duración semanal</string>
    <string name="polifunctionality">Polifuncionalidad</string>

    <string name="one_d4">Característica del síntoma</string>
    <string name="two_d4">Manifestación del síntoma</string>
    <string name="three_d4">Temporalidad del síntoma</string>
    <string name="four_d4">Permanencia del síntoma</string>
    <string name="five_d4">Intensidad del síntoma</string>

    <string name="d4_copy">Partes del cuerpo a continuación:</string>
    <string name="photos_copy_alert">Es necesario tomar tres fotos para poder enviar la información.</string>
    <string name="taken_photos">Tomadas: %s</string>
    <string name="photos_already_taken">Las tres fotos del puesto del trabajo fueron tomadas.</string>

    <string name="exit_survey">Al salir del formulario toda la información que fue diligenciada se perderá. ¿Desea continuar?</string>

    <string name="discrete_titles">Reporte variables discretas</string>
    <string name="pick_variables">Reporte variables discretas: Seleccione la variable para generar el reporte.</string>
    <string name="pick_variables_cont">Reporte variables continuas: Seleccione la variable para generar el reporte.</string>

    <string name="age_chart">Grupo de edad</string>
    <string name="dominance_chart">Dominancia</string>
    <string name="imc_chart">Clasificación IMC</string>
    <string name="charge_chart">Antiguedad</string>
    <string name="smoke_chart">Fuma</string>
    <string name="cigarrettes_chart">Cigarrillos al día</string>
    <string name="cigarrettes_time_chart">Hace cuanto tiempo fuma</string>
    <string name="physical_activity_chart">Realiza actividad fisica</string>
    <string name="frequency_physical_activity_chart">Frecuencia actividad fisica</string>
    <string name="duration_physical_activity_chart">Duración actividad fisica</string>
    <string name="hours_worked_chart">Horas diarias trabajadas</string>
    <string name="variable_hours_worked_chart">Duración de trabajo variable</string>
    <string name="pain_chart">Dolor o molestia en el cuerpo</string>
    <string name="sick_chart">Enfermedades actuales</string>

    <string name="gender">Género</string>
    <string name="name_graph">Nombre</string>
    <string name="lastname_graph">Apellido</string>
    <string name="identification_graph">Identificación</string>

</resources>